A few other small axe tweaks and first attempt at mutation observer to fix height clipper bug

--- a/client/src/infographic/Infographic.scss
+++ b/client/src/infographic/Infographic.scss
@@ -18,7 +18,7 @@ of the advanced search for mobile */
   padding-inline-start: 0;
 }
 .panel-status-text {
-  color: $tertiaryColor;
+  color: $textGray;
   font-size: 13px;
 }
 .previous_and_next_bubble_link_row {
